--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "react": "^17.0.1"
   },
   "devDependencies": {
-    "eslint-config-pulsovi": "https://github.com/pulsovi/eslint-config-pulsovi.git",
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-pulsovi": "^2.4.2",
+    "eslint-plugin-import": "^2.22.1",
     "react": "^17.0.1"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dot-prop": "^6.0.1",
     "telejson": "^5.1.0"
   }
 }
