--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-debug",
+  "name": "@pulsovi/react-debug",
   "description": "provide a hook to debug why and how a component is rerendered",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "main": "index.js",
   "repository": "https://github.com/pulsovi/react-debug",
   "author": "David GABISON <david.gabison@outlook.com>",
@@ -25,5 +25,8 @@
     "axios": "^0.21.1",
     "dot-prop": "^6.0.1",
     "telejson": "^5.1.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
